--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,8 @@ li {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	color: inherit;
+	color: #ffffff;
+
 }
 
 .nav > li > a {
@@ -254,7 +255,8 @@ strong,
 }
 
 .small-text {
-	font-size: 14px;
+	font-family: 'Open Sans';
+	font-size: 13px;
 }
 
 .small-text-medium {
@@ -341,7 +343,7 @@ strong,
 
 .navbar-register-button {
 	border: none;
-	font-weight: 500;
+	font-weight: 400;
 	text-transform: uppercase;
 	color: #ffffff !important;
 	-webkit-transition: none;
@@ -523,13 +525,19 @@ strong,
 }
 
 .sticky-navigation {
-	background: #ffffff;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	background: #43C5DF;
 	min-height: 70px;
 	border: none;
 	margin-bottom: 0 !important;
 	-webkit-backface-visibility: hidden;
 	-webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.08);
 	box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.08);
+}
+
+.navbar-brand{
+	float: left;
 }
 
 .sticky-navigation .navbar-brand {
