--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,9 @@ URL: http://twitter.com/MizanME
 
 	3.4 SECTION: LEFT / RIGHT BRIEF
 
-	3.5 SECTION: STATS
+	3.5.1 SECTION: DEMOREEL 1
+	3.5.2 SECTION: DEMOREEL 2
+	3.5.3 SECTION: DEMOREEL 3
 
     3.6 SECTION: FEATURES
 
@@ -208,7 +210,7 @@ h1 {
 }
 
 h2 {
-	font-size: 2.4rem;
+	font-size: 2.0rem;
 	line-height: 3.125rem;
 }
 
@@ -243,7 +245,7 @@ strong,
 }
 
 .dark-text {
-	color: #454545;
+	color: #201d1d;
 }
 
 .transparent-text {
@@ -750,34 +752,45 @@ strong,
 }
 
 /*---------------------------------------
-   3.5 SECTION: STATS
+   3.5.1 SECTION: DEMOREEL 1
 -----------------------------------------*/
-.stats {
-	background: url(../images/background-images/2.jpg) no-repeat center top fixed;
+.demoreel-1 {
+	background: url(../images/background-images/demoreel-1.jpg) no-repeat center top;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
 
-.stats .overlay-layer-2 {
+.demoreel-1 .overlay-layer-2 {
 	padding-top: 80px;
 	padding-bottom: 80px;
 }
 
-.single-stats {
-	margin-top: 40px;
-	margin-bottom: 40px;
+/*---------------------------------------
+   3.5.2 SECTION: DEMOREEL 2
+-----------------------------------------*/
+.demoreel-2 {
+	background: url(../images/background-images/demoreel-2.jpg) no-repeat center top;
+	-webkit-background-size: cover;
+	background-size: cover;
 }
 
-.single-stats .icon-container {
-	margin-bottom: 35px;
+.demoreel-2 .overlay-layer-2 {
+	padding-top: 80px;
+	padding-bottom: 80px;
 }
 
-.single-stats .icon-container span {
-	font-size: 70px;
+/*---------------------------------------
+   3.5.3 SECTION: DEMOREEL 3
+-----------------------------------------*/
+.demoreel-3 {
+	background: url(../images/background-images/demoreel-3.jpg) no-repeat center top;
+	-webkit-background-size: cover;
+	background-size: cover;
 }
 
-.stats-footer .long-transparent-line {
-	margin-bottom: 45px;
+.demoreel-3 .overlay-layer-2 {
+	padding-top: 80px;
+	padding-bottom: 80px;
 }
 
 /*---------------------------------------
